--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="holder" id="holder">
+		<div>items</div>
+		<div>items</div>
+		<div>items</div>
+		<div>items</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
